--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf dist && webpack --mode production"
   },
   "keywords": [],
-  "author": "",
+  "author": "Teja Kadali",
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.6",
